[build-system]
requires = [
    "setuptools >= 66",
    "setuptools_scm >= 7.0.0",
    "wheel >= 0.38.4",
]
build-backend = 'setuptools.build_meta'


[project]
name = "experimentqshi"
version = "0.0.1"
authors = [
  { name="qbs", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
